--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "web": "expo start --web",
-    "start": "react-native start"
+    "start": "react-native start",
+    "api": "yarn json-server -d 750 -w -H 192.168.100.4 -p 3333 ./src/api/server.js"
   },
   "dependencies": {
     "expo": "~42.0.1",
@@ -21,7 +22,12 @@
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "^7.9.0",
+    "@types/react": "~16.9.35",
+    "@types/react-native": "~0.63.2",
+    "json-server": "^0.17.0",
+    "react-devtools": "^4.19.1",
+    "typescript": "~4.0.0"
   },
   "private": true
 }
